# rust-handler-node

./: Cargo.toml  README.md  browser.js  index.d.ts  index.js  package.json  pnpm-lock.yaml  rust-handler-node.wasi-browser.js  rust-handler-node.wasi.cjs  tsconfig.json
.github/workflows/: CI.yml
benchmark/: bench.ts  benchNodejs.ts  tsconfig.json
benchmark/nodejs/: index.ts  model.undo.entity.cache.ts  undo.service.ts
src/: lib.rs
src/api_auto_shutter/: auto_shutter_api.rs  mod.rs
src/api_cache/: auto_shutter_cache_api.rs  dcs_pointinfor_api.rs  err_handle.rs  mod.rs  undo_redo_api.rs  variable_curve_api.rs
src/api_config/: conf_config_api.rs  conf_function_pic_api.rs  mod.rs
src/api_database/: generate_napi_methods_handle.rs  mod.rs
src/api_database/api_auto_shutter/: auto_shutter_api.rs
src/api_database/api_business/: mod.rs
src/api_database/api_cache/: auto_shutter_cache_api.rs  dcs_pointinfor_api.rs  mod.rs  undo_redo_api.rs  variable_curve_api.rs
src/api_database/api_config/: conf_config_api.rs  conf_function_pic_api.rs  conf_graphic_custom_api.rs  conf_model_api.rs  conf_pf_model_params_api.rs  conf_system_variable_api.rs  conf_unit_api.rs  mod.rs
src/api_database/api_physical_property/: mod.rs  physical_binary_api.rs  physical_calc_api.rs  physical_component_api.rs  physical_henry_api.rs
src/api_database/api_shutter/: mod.rs  shutter_api.rs
src/api_database/init_db/: init_db_api.rs  mod.rs
src/api_shutter/: shutter_api.rs
src/database/: mod.rs  undo_redo_service.rs
src/database/entity/: mod.rs  model_undo_entity_cache.rs
src/database_auto_shutter/: db_auto_shutter_connection.rs
src/database_auto_shutter/entity/: model_auto_shutter_entity.rs
src/database_auto_shutter/migration/: m20251203_000001_create_tables.rs
src/database_auto_shutter/service/: auto_shutter_service.rs
src/database_cache/: db_cache_connection.rs
src/database_cache/entity/: model_auto_shutter_entity_cache.rs  model_pointinfor_entity_cache.rs  model_undo_entity_cache.rs  model_variable_curve_entity_cache.rs
src/database_cache/migration/: m20251201_000001_create_tables.rs
src/database_cache/service/: auto_shutter_cache_service.rs  dcs_pointinfor_service.rs  undo_redo_service.rs  variable_curve_service.rs
src/database_config/: db_config_connection.rs
src/database_config/entity/: conf_config_entity.rs  conf_function_pic.rs  conf_graphic_custom_entity.rs  conf_model_entity.rs  conf_pf_model_entity.rs  mod.rs
src/database_config/migration/: m20251205_000001_create_tables.rs
src/database_config/service/: conf_config_service.rs  mod.rs  (+1 more)
src/database_shutter/: db_shutter_connection.rs  mod.rs
src/error_handle/: err_handle.rs  mod.rs
src/init_db/: init_db_api.rs
src/service_database/: interface_trait.rs  mod.rs  until_handle.rs
src/tool_handle/: json_status_handle.rs  mod.rs  model_type.rs  result_entity.rs  time_tool.rs
(+212 files in other folders)
