[package]
authors = ["xupeng <710324612@qq.com>"]
edition = "2021"
name = "rust_handler_node"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.6.1", features = ["async", "tokio_rt"] }
napi-derive = "3.4.0"

# 强制 SeaORM + SQLite 完全走 rustls，避免 openssl
sea-orm = { version = "2.0.0-rc.3", default-features = false, features = [
    "macros",
    "sqlx-sqlite",
    "runtime-tokio-rustls"
] }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
sea-orm-migration = { version = "2.0.0-rc.3", default-features = false, features = [
    "runtime-tokio-rustls"
] }

# 强制任何依赖链禁止 openssl
[patch.crates-io]
native-tls = { git = "https://github.com/ctz/rustls-native-certs", package = "rustls-native-certs" }
openssl = { git = "https://github.com/rustls/rustls", package = "rustls" }
openssl-sys = { git = "https://github.com/rustls/rustls", package = "rustls" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
