[package]
authors = ["xupeng <710324612@qq.com>"]
edition = "2021"
name = "rust_handler_node"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.6.1", features = ["async", "tokio_rt"] }
napi-derive = "3.4.0"

# SeaORM SQLite 完全不需要 OpenSSL
# 关键点：禁用 default-features !
sea-orm = { version = "2.0.0-rc.3", default-features = false, features = [
    "macros",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }

# 同样禁用其 default-features，避免意外启用 native-tls / openssl
sea-orm-migration = { version = "2.0.0-rc.3", default-features = false, features = [
    "runtime-tokio-rustls"
] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
