[package]
authors = ["xupeng <710324612@qq.com>"]
edition = "2021"
name = "rust_handler_node"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.6.1", features = ["async", "tokio_rt","serde-json"] }
napi-derive = "3.4.0"

# SeaORM（禁用 rustls-openssl 自动检测，避免 ring）
sea-orm = { version = "~2.0.0-rc",features = ["runtime-tokio", "sqlx-sqlite", "macros" ]}


tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
sea-orm-migration = "~2.0.0-rc"
anyhow = "1.0.100"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
